--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Test Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome!</h1>
-    <p>This is a simple test page created by Claude.</p>
     <div class="container">
-        <section>
+        <h1>Welcome!</h1>
+        <p class="intro">This is a simple test page created by Claude.</p>
+        <section class="about">
             <h2>About</h2>
-            <p>This page demonstrates basic HTML structure and will soon include CSS styling.</p>
+            <p>This page demonstrates basic HTML structure with CSS styling.</p>
         </section>
     </div>
 </body>
