Add more content sections and styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,40 @@
     <div class="container">
         <h1>Welcome!</h1>
         <p class="intro">This is a simple test page created by Claude.</p>
+        
         <section class="about">
             <h2>About</h2>
             <p>This page demonstrates basic HTML structure with CSS styling.</p>
+        </section>
+
+        <section class="features">
+            <h2>Features</h2>
+            <ul>
+                <li>Clean and modern design</li>
+                <li>Responsive layout</li>
+                <li>Organized content sections</li>
+                <li>Custom CSS styling</li>
+            </ul>
+        </section>
+
+        <section class="examples">
+            <h2>Example Content</h2>
+            <p>Here's some example content with different HTML elements:</p>
+            <ol>
+                <li>Ordered lists for step-by-step instructions</li>
+                <li>Unordered lists for feature highlights</li>
+                <li>Sections for content organization</li>
+            </ol>
+        </section>
+
+        <section class="contact">
+            <h2>Contact</h2>
+            <p>Get in touch with us:</p>
+            <div class="contact-info">
+                <p>Email: example@domain.com</p>
+                <p>Phone: (555) 123-4567</p>
+                <p>Address: 123 Main Street, Anytown, USA</p>
+            </div>
         </section>
     </div>
 </body>
